--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         </nav>
         <div class = "container">
-        <img class ="splash" src = "Main.jpg">
+        <img class ="splash" src = "the.jpg">
         <div class="centered">The Best</div>  
         </div>
         <p class = "Mainp">
